# client-api.openapi.yaml
@@ -94,17 +94,17 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProductPageResponse'
   /products/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+          format: int64
     get:
       summary: Get product detail by ID
       tags:
         - Product
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: integer
-            format: int64
       responses:
         200:
           description: Product detail
@@ -112,6 +112,75 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProductDto'
+    delete:
+      summary: Delete product by ID
+      description: Require ADMIN role
+      responses:
+        200:
+          description: Product deleted
+          content:
+            application/json: {}
+  /users:
+    get:
+      summary: Get users with pagination
+      tags:
+        - User
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: string
+        - in: query
+          name: size
+          schema:
+            type: string
+      responses:
+        200:
+          description: Get users with pagination
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserPageResponse'
+    post:
+      summary: Create new user
+      tags:
+        - User
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateUserRequest'
+      responses:
+        200:
+          description: User created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserProfile'
+  /users/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+          format: int64
+    get:
+      summary: Get user detail by ID
+      responses:
+        200:
+          description: User profile
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserProfile'
+    delete:
+      summary: Delete user by ID
+      responses:
+        200:
+          description: User deleted
+          content:
+            application/json: {}
 components:
   schemas:
     LoginRequest:
@@ -151,6 +220,13 @@ components:
           type: string
         email:
           type: string
+        role:
+          type: string
+        status:
+          type: string
+          enum:
+            - ACTIVE
+            - INACTIVE
         updated_at:
           type: string
           format: date-time
@@ -196,6 +272,21 @@ components:
         created_at:
           type: string
           format: date-time
+    UserPageResponse:
+      type: object
+      properties:
+        current_page:
+          type: integer
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/UserProfile'
+        from:
+          type: integer
+        to:
+          type: integer
+        per_page:
+          type: integer
     ProductPageResponse:
       type: object
       properties:
@@ -211,3 +302,20 @@ components:
           type: integer
         per_page:
           type: integer
+    CreateUserRequest:
+      type: object
+      properties:
+        name:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+        password_confirmation:
+          type: string
+        role:
+          type: string
+          enum:
+            - ADMIN
+            - NORMAL_USER
+            - EDITOR
