# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\ProductController;
+use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
@@ -24,5 +25,6 @@ Route::group([
     'middleware' => 'auth:api',
 ], function ($router) {
     Route::resource("/products", ProductController::class);
+    Route::resource("/users", UserController::class);
 });
 
